Revert "test_modif_title"
This reverts commit b841f7ecf311c75bae3cb8faa09224e196ab3acd.

--- a/www/v4/Accueil.html
+++ b/www/v4/Accueil.html
@@ -20,7 +20,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>U POP - TEST</title>
+	<title>U POP</title>
 </head>
 
 <body>
