--- a/www/v4/Panier.html
+++ b/www/v4/Panier.html
@@ -36,6 +36,7 @@
 
 			<div class="collapse navbar-collapse navbar-left" id="menu">
 				<ul class="nav navbar-nav text-center">
+					<li><img class="logoBar" src="images/iconeupop.png"></li>
 					<li><a href="accueil.html"><img class="imgButton" src="images/home.png"></a>Accueil</li>
 					<li><a href="figurines.html"><img class="imgButton" src="images/anime.png"></a>Figurines</li>
 					<li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a>Contact</li>
