--- a/www/v4/Compte.html
+++ b/www/v4/Compte.html
@@ -50,28 +50,69 @@
 <!-- fin barre de navigation -->
 
 <!-- contenu de la page -->
-	<div class="container">
-<!-- titre d'en tete -->
-		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-				<h1>Compte</h1>
-				<div class="col-xs-12"><hr></div>
-			</div>
-		</div>
-<!-- articles de la page -->
-		<div class="row">
-			<article class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-				<h2>Lorem Ipsum</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</article>
-
-			<article class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-				<h2>Pour les puristes</h2>
-				<p class="textColor">Section 1.10.32 du "De Finibus Bonorum et Malorum" de Ciceron (45 av. J.-C.)</p>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-			</article>
-		</div>
+<div class="container">
+        <div class="row centered-form">
+        <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+        	<div class="panel panel-default">
+        		<div class="panel-heading">
+			    		<h3 class="panel-title">Formulaire des données personnels</h3>
+			 			</div>
+			 			<div class="panel-body">
+			    		<form role="form">
+			    				<div class="col-xs-12 col-sm-12 col-md-12">
+			    					<div class="form-group">
+			    			<input type="text" name="Nom" id="last_name" class="form-control input-sm" placeholder="Nom">
+			    					</div>
+			    				</div>
+								<div class="col-xs-12 col-sm-12 col-md-12">
+			    					<div class="form-group">
+			    			<input type="text" name="Prénom" id="last_name" class="form-control input-sm" placeholder="Prénom">
+			    					</div>
+								</div>
+			    					<div class="col-xs-6 col-sm-6 col-md-6">
+			    					<div class="form-group">
+			    			<input type="text" name="Genre" id="last_name" class="form-control input-sm" placeholder="Genre  (H/F)">
+			    					</div>
+			    				</div>
+									<div class="col-xs-6 col-sm-6 col-md-6">
+			    					<div class="form-group">
+			    			<input type="text" name="Date de naissance" id="last_name" class="form-control input-sm" placeholder="Date de naissance">
+			    					</div>
+			    				</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+			    					<div class="form-group">
+			    			<input type="text" name="Mot de passe" id="last_name" class="form-control input-sm" placeholder="Mot de passe">
+			    					</div>
+			    				</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+			    					<div class="form-group">
+			    			<input type="text" name="Adresse" id="last_name" class="form-control input-sm" placeholder="Adresse Postale">
+			    					</div>
+			    				</div>
+									<div class="col-xs-6 col-sm-6 col-md-6">
+			    					<div class="form-group">
+			    			<input type="text" name="Code Postal" id="last_name" class="form-control input-sm" placeholder="Code Postal">
+			    					</div>
+			    				</div>
+									<div class="col-xs-6 col-sm-6 col-md-6">
+			    					<div class="form-group">
+			    			<input type="text" name="Ville" id="last_name" class="form-control input-sm" placeholder="Ville">
+			    					</div>
+			    				</div>
+									<div class="col-xs-12 col-sm-12 col-md-12">
+			    					<div class="form-group">
+			    			<input type="text" name="E-mail" id="last_name" class="form-control input-sm" placeholder="E-mail">
+			    					</div>
+			    				</div>		
+			    			<input type="submit" value="Mettre à jour" class="btn btn-info btn-block">
+			    		
+			    		</form>
+			    	</div>
+	    		</div>
+    		</div>
+    	</div>
+    </div>
+</div>
 <!-- fin articles de la page -->
 	</div>
 <!-- fin contenu de la page -->
