--- a/www/v4/Figurines.html
+++ b/www/v4/Figurines.html
@@ -51,37 +51,55 @@
 
 <!-- contenu de la page -->
 	<div class="container">
-
 <!-- choix de la catégorie -->
 		<div class="row text-center">
 			<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-<!-- WARNING A COMPLETER AVEC REQUETE SQL ( href ) -->
+<!-- /!\ WARNING A COMPLETER AVEC REQUETE SQL ( href ) -->
 				<a href=""><img class="imgButton2" src="images/jeux.png"></br>Jeux Vidéos</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-<!-- WARNING A COMPLETER AVEC REQUETE SQL ( href ) -->
+<!-- /!\ WARNING A COMPLETER AVEC REQUETE SQL ( href ) -->
 				<a href=""><img class="imgButton2" src="images/serie.png"></br>Séries</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-<!-- WARNING A COMPLETER AVEC REQUETE SQL  ( href ) -->
+<!-- /!\ WARNING A COMPLETER AVEC REQUETE SQL  ( href ) -->
 				<a href=""><img class="imgButton2" src="images/film.png"></br>Films</a>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-<!-- WARNING A COMPLETER AVEC REQUETE SQL ( href ) -->
+<!-- /!\ WARNING A COMPLETER AVEC REQUETE SQL ( href ) -->
 				<a href=""><img class="imgButton2" src="images/anime.png"></br>Animés</a>
 			</div>
 		</div>
 		<div class="col-xs-12"><hr></div>
 <!-- fin de choix de la catégorie -->
-
-<!-- titre en tete liste -->
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-				<h1>Figurines</h1>
-				<div class="col-xs-12"><hr></div>
+<!-- /!\ WARNING A COMPLETER AVEC REQUETE SQL ( href ) -->
+				<h2>A remplir en fonction de la requête SQL</h2>
+			</div>
+			<div class="col-xs-12"><hr></div>
+		</div>
+<!--  -->
+		<div class="row fond" style="margin-top: 10px;">
+			<div class="col-sm-1 col-sm-1 col-md-1 col-lg-1">
+				<img style="max-height: 80px; max-width: 80px; margin-right: 10px;" src="images/got1.jpg">
+			</div>
+			<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+				<p><b>Titre figurine</b></p>
+				<p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
+				<p style="color: grey; font-size: smaller;">Réf : 01010101</p>
+			</div>
+			<div class="col-sm-1 col-sm-1 col-md-1 col-lg-1">
+				<p>En stock</p>
+			</div>
+			<div class="col-sm-1 col-sm-1 col-md-1 col-lg-1">
+				<p>Prix</p>  
+			</div>
+			<div class="col-sm-1 col-sm-1 col-md-1 col-lg-1">
+				<button>Add Cart</button>
 			</div>
 		</div>
-
+		<div class="col-xs-12"><hr></div>
 	</div>
 <!-- fin contenu de la page -->
 
