Dylan : Optimisation Figurines.html

--- a/www/v4/Figurines.html
+++ b/www/v4/Figurines.html
@@ -106,9 +106,10 @@
 				<button>Add Cart</button>
 			</div>
 		</div>
-		<div class="col-xs-12"><hr></div>
+		<div><hr></div>
 	</div>
 <!-- Fin Modèle d'article -->
+
 <!-- fin contenu de la page -->
 
 </body>
