--- a/www/v4/Contact.html
+++ b/www/v4/Contact.html
@@ -48,8 +48,58 @@
 			</div>
 		</nav>
 		<!-- fin barre de navigation -->
-		<!-- contenu de la page -->
-		<!-- titre d'en tete --><div class="jumbotron jumbotron-sm barre barre-sm"><div class="container"><div class="row"><div class="col-sm-12 col-lg-12"><h1 class="h1">Formulaire de contact</h1></div></div></div></div><div class="container"><div class="row"><div class="col-md-8"><div class="well well-sm"><form><div class="row"><div class="col-md-6"><div class="form-group"><label for="name">Prénom :</label><input type="text" class="form-control" id="name" placeholder="Prénom" required="required" /></div><div class="form-group"><label for="email">Adresse e-mail :</label><div class="input-group"><span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span><input type="email" class="form-control" id="email" placeholder="E-mail" required="required" /></div></div><div class="form-group"><label for="subject">Sujet</label><select id="subject" name="subject" class="form-control" required="required"><option value="na" selected="">Objet :</option><option value="service">Problème de commande</option><option value="suggestions">Suggestion évolution du site</option><option value="product">Autres</option></select></div></div><div class="col-md-6"><div class="form-group"><label for="name">Message :</label><textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"placeholder="Message"></textarea></div></div><div class="col-md-12"><button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Envoyer</button></div></div></form></div></div><div class="col-md-4"><form><legend><span class="glyphicon glyphicon-globe"></span> U'POP</legend>
+		<!-- contenu de la page -->	
+		<div class="jumbotron jumbotron-sm barre barre-sm">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12 col-lg-12">
+				<h1 class="h1">Formulaire de contact</h1>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-8">
+			<div class="well well-sm">
+				<form>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								<label for="name">Prénom :</label>
+								<input type="text" class="form-control" id="name" placeholder="Prénom" required="required" />
+							</div>
+							<div class="form-group">
+								<label for="email">Adresse e-mail :</label>
+								<div class="input-group">
+									<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
+									<input type="email" class="form-control" id="email" placeholder="E-mail" required="required" />
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="subject">Sujet</label>
+								<select id="subject" name="subject" class="form-control" required="required">
+									<option value="na" selected="">Objet :</option>
+									<option value="service">Problème de commande</option>
+									<option value="suggestions">Suggestion évolution du site</option>
+									<option value="product">Autres</option>
+								</select>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<label for="name">Message :</label>
+								<textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"placeholder="Message"></textarea>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Envoyer</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+		<!-- cadre adresse -->
 	<address>
 		<strong>U'POP</strong>
 		<br>
