--- a/www/v4/Compte.html
+++ b/www/v4/Compte.html
@@ -54,7 +54,7 @@
 				<div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							<h3 class="panel-title">Formulaire des données personnels</h3>
+							<h3 class="panel-title">Formulaire des données personnelles</h3>
 						</div>
 						<div class="panel-body">
 							<form role="form">
