JC - harmonisation du site
- harmonisation des couleurs du site.
- Edition des pages accueil, compte, contact et index
- Edition des css accueil, index, main
- Detourage des photos de la page accueil

Reste à recréer les icones pour coller aux couleurs du site.

--- a/www/v4/Accueil.html
+++ b/www/v4/Accueil.html
@@ -130,8 +130,8 @@
         <hr class="bg-dark mb-4 w-25">
         <div class="row">
             <div class="col-md-4">
-                <div class="card">
-                    <img class="image1" src="./images/KING_figurine.jpg" alt="Card image cap">
+                <div class="card panel panel-default">
+                    <img class="image1" src="./images/King.png" alt="Card image cap">
                     <div class="card-block p-3">
                         <h4 class="card-title">Nouveautées !</h4>
                         <p class="card-text">De nouveaux produits sont en stocks dans nos rayons, venez vite les découvrir avant que tous nos U'POPS partent !</p>
@@ -140,8 +140,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
-                    <img class="image1" src="./images/TROOPER_figurine.jpg" alt="Card image cap">
+                <div class="card panel panel-default">
+                    <img class="image1" src="./images/Trooper.png" alt="Card image cap">
                     <div class="card-block p-3">
                         <h4 class="card-title">A nouveau présent !</h4>
                         <p class="card-text">Les U'POPS de la catégorie STARS WARS ont été victimes de leurs succès ! Mais grâce à notre réactivité, ils sont à nouveau disponible !</p>
@@ -150,8 +150,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
-                    <img class="image1" src="./images/SNOW_figurine.jpg" alt="Card image cap">
+                <div class="card panel panel-default">
+                    <img class="image1" src="./images/Snow.png" alt="Card image cap">
                     <div class="card-block p-3">
                         <h4 class="card-title">Winter is COMING ! </h4>
                         <p class="card-text">Le mois de décembre arrive à grand pas ! N'hésitez pas vous équiper en conséquence ! Toutes notre collections U'POP est présente !</p>
@@ -164,7 +164,7 @@
     <!-- Card -->
 
     <div class="container mb-5">
-        <div class="row">
+        <div class="row  panel panel-default">
             <div class="col-md-8">
                 <h3 class="display-4">Histoire des U'POPS</h3>
                 <hr class="bg-dark w-25 ml-0">
@@ -186,7 +186,7 @@
                 </ul>
             </div>
             <div class="col-md-4 mt-5">
-                <img class="image2" src="./images/DEADPOOL_figurine.jpg" alt="Card image cap">
+                <img class="image2" src="./images/Deadpool.png" alt="Card image cap">
             </div>
         </div>
     </div>
