--- a/www/v4/Compte.html
+++ b/www/v4/Compte.html
@@ -103,7 +103,7 @@
 										<input type="text" name="E-mail" id="last_name" class="form-control input-sm" placeholder="E-mail">
 									</div>
 								</div>
-								<input type="submit" value="Mettre à jour" class="btn btn-info btn-block">
+								<input type="submit" value="Mettre à jour" class="btn btn-block">
 							</form>
 						</div>
 					</div>
