--- a/www/v4/Contact.html
+++ b/www/v4/Contact.html
@@ -50,78 +50,76 @@
 		<!-- fin barre de navigation -->
 		<!-- contenu de la page -->	
 		<div class="jumbotron jumbotron-sm barre barre-sm">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12 col-lg-12">
-				<h1 class="h1">Formulaire de contact</h1>
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 col-lg-12">
+						<h1 class="h1">Formulaire de contact</h1>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
-</div>
-<div class="container">
-	<div class="row">
-		<div class="col-md-8">
-			<div class="well well-sm">
-				<form>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="form-group">
-								<label for="name">Prénom :</label>
-								<input type="text" class="form-control" id="name" placeholder="Prénom" required="required" />
-							</div>
-							<div class="form-group">
-								<label for="email">Adresse e-mail :</label>
-								<div class="input-group">
-									<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-									<input type="email" class="form-control" id="email" placeholder="E-mail" required="required" />
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
+					<div class="well well-sm panel panel-default">
+						<form>
+							<div class="row">
+								<div class="col-md-6">
+									<div class="form-group">
+										<label for="name">Prénom :</label>
+										<input type="text" class="form-control" id="name" placeholder="Prénom" required="required" />
+									</div>
+									<div class="form-group">
+										<label for="email">Adresse e-mail :</label>
+										<div class="input-group">
+											<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
+											<input type="email" class="form-control" id="email" placeholder="E-mail" required="required" />
+										</div>
+									</div>
+									<div class="form-group">
+										<label for="subject">Sujet</label>
+										<select id="subject" name="subject" class="form-control" required="required">
+											<option value="na" selected="">Objet :</option>
+											<option value="service">Problème de commande</option>
+											<option value="suggestions">Suggestion évolution du site</option>
+											<option value="product">Autres</option>
+										</select>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+										<label for="name">Message :</label>
+										<textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"placeholder="Message"></textarea>
+									</div>
+								</div>
+								<div class="col-md-12">
+									<button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Envoyer</button>
 								</div>
 							</div>
-							<div class="form-group">
-								<label for="subject">Sujet</label>
-								<select id="subject" name="subject" class="form-control" required="required">
-									<option value="na" selected="">Objet :</option>
-									<option value="service">Problème de commande</option>
-									<option value="suggestions">Suggestion évolution du site</option>
-									<option value="product">Autres</option>
-								</select>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="form-group">
-								<label for="name">Message :</label>
-								<textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"placeholder="Message"></textarea>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Envoyer</button>
-						</div>
+						</form>
 					</div>
-				</form>
+				</div>
+			<!-- cadre adresse -->
+				<address>
+					<strong>U'POP</strong>
+					<br>
+					107 rue de l'UDEV
+					<br>
+					63000 CLERMONT-FERRAND
+					<br>
+					Tél :
+					<abbr title="Phone">
+						(+33) 9 00 10 12 13
+					</abbr>
+				</address>
+				<address>
+					<strong>Mail-contact</strong>
+					<br>
+					<a href="mailto:#">upop.contact@gmail.com</a>
+				</address>
 			</div>
 		</div>
-		<!-- cadre adresse -->
-	<address>
-		<strong>U'POP</strong>
-		<br>
-		107 rue de l'UDEV
-		<br>
-		63000 CLERMONT-FERRAND
-		<br>
-		Tél :
-		<abbr title="Phone">
-			(+33) 9 00 10 12 13
-		</abbr>
-	</address>
-	<address>
-		<strong>Mail-contact</strong>
-		<br>
-		<a href="mailto:#">upop.contact@gmail.com</a>
-	</address>
-</form>
-</div>
-</div>
-</div>
 <!-- fin articles de la page -->
 <!-- fin contenu de la page -->
-</body>
+	</body>
 </html>
