--- a/www/v4/Index.html
+++ b/www/v4/Index.html
@@ -33,17 +33,17 @@
 						<h4>Bienvenue sur U'POP</h4>
 						<input type="text" id="userName" name="userName" class="form-control input-sm chat-input" placeholder="Pseudo" />
 						</br>
-						<input type="text" id="userPassword" name="userPassword" class="form-control input-sm chat-input" placeholder="Mot de passe" />
+						<input type="password" id="userPassword" name="userPassword" class="form-control input-sm chat-input" placeholder="Mot de passe" />
 						</br>
 						<div class="wrapper">
 							<span class="group-btn">  
 								<br>
-								<input href="#" class="bouton" type="submit" name="connexion" value="Se connecter">
-								
+								<button href="#" class="btn" type="submit" name="connexion">Se connecter</button>
+								<button class="btn" type="button" onclick="boutonClick(event)">Inscription</button>
 							</span>
 						</div>
 					</form>
-					<button class="bouton" onclick="boutonClick(event)">Inscription</button>
+					
 				</div>
 			</div>
 			
@@ -111,7 +111,7 @@
 										<input type="text" name="E-mail" id="mailUser" class="form-control input-sm" placeholder="E-mail">
 									</div>
 								</div>
-								<input type="submit" value="Validation" class="bouton">
+								<button class="btn" type="submit">Valider</button>
 							</form>
 						</div>
 					</div>
