JC - Harmonisation navbar
- création et intégration des nouvelles icones
- harmonisation du code html de la navbar dans les pages

--- a/www/v4/Figurines.html
+++ b/www/v4/Figurines.html
@@ -31,21 +31,20 @@
 
 			<div class="nav-header">
 				<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" name="button">
-				 	<img class="imgButton" src="images/iconeupop.png">
-			 	</button>
+					<img class="imgButton" src="images/iconeupop.png">
+				</button>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-left" id="menu">
 				<ul class="nav navbar-nav text-center">
 					<li><img class="logoBar" src="images/iconeupop.png"></li>
-					<li><a href="accueil.html"><img class="imgButton" src="images/home.png"></a>Accueil</li>
-					<li><a href="figurines.html"><img class="imgButton" src="images/anime.png"></a>Figurines</li>
+					<li><a href="accueil.html" ><img class="imgButton" src="images/home.png"></a>Accueil</li>
+					<li><a href="figurines.html"><img class="imgButton" src="images/figurine.png"></a>Figurines</li>
 					<li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a>Contact</li>
 					<li><a href="compte.html"><img class="imgButton" src="images/compte.png"></a>Compte</li>
 					<li><a href="panier.html"><img class="imgButton" src="images/panier.png"></a>Panier</li>
 				</ul>
 			</div>
-
 		</div>
 	</nav>
 <!-- fin barre de navigation -->
