--- a/www/v4/Contact.html
+++ b/www/v4/Contact.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 <!-- barre de navigation -->
-	<nav class="navbar navbar-default menu">
+	<nav class="navbar navbar-default navbar-fixed-top menu">
 		<div class="container-fluid">
 
 			<div class="nav-header">
@@ -27,11 +27,12 @@
 			<div class="collapse navbar-collapse navbar-left" id="menu">
 				<ul class="nav navbar-nav text-center">
 					<li><img class="logoBar" src="images/iconeupop.png"></li>
-					<li><a href="accueil.html" ><img class="imgButton" src="images/home.png"></a>Accueil</li>
-					<li><a href="figurines.html"><img class="imgButton" src="images/figurine.png"></a>Figurines</li>
-					<li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a>Contact</li>
-					<li><a href="compte.html"><img class="imgButton" src="images/compte.png"></a>Compte</li>
-					<li><a href="panier.html"><img class="imgButton" src="images/panier.png"></a>Panier</li>
+					<li><a href="accueil.html" ><img class="imgButton" src="images/home.png"></a></li>
+					<li><a href="figurines.html"><img class="imgButton" src="images/figurine.png"></a></li>
+                    <!-- <li><h2 id="titre">Accueil</h2></li> -->
+					<li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a></li>
+					<li><a href="compte.html"><img class="imgButton" src="images/compte.png"></a></li>
+					<li><a href="panier.html"><img class="imgButton" src="images/panier.png"></a></li>
 				</ul>
 			</div>
 		</div>
