Camille  : MAJ contact html css MAJ structure
Page contact :
Enlevé la bordure grise (optimiser à la forme du site)
Adresse = panel panel-default (intégrer)

--- a/www/v4/Contact.html
+++ b/www/v4/Contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN""http://www.w3c.org/TR/xhtml1/DTD/xtmlhtml1-strict.dtd">
 <html>
 	<head>
+
 		<meta charset='utf-8'>
 		<link rel="icon" type="image/png" href="Images\iconeupop.png"/>
 		<!-- feuilles de style -->
@@ -11,7 +12,10 @@
 		<script type="application/javascript" src="./js/jquery-2.1.1.min.js"></script>
 		<script type="application/javascript" src="./js/bootstrap.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+
 		<title>U POP</title>
+	
 	</head>
 	<body>
 <!-- barre de navigation -->
@@ -39,19 +43,10 @@
 	</nav>
 <!-- fin barre de navigation -->
 		<!-- contenu de la page -->	
-		<div class="jumbotron jumbotron-sm barre barre-sm">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 col-lg-12">
-						<h1 class="h1">Formulaire de contact</h1>
-					</div>
-				</div>
-			</div>
-		</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
-					<div class="well well-sm panel panel-default">
+					<div class="well well-sm panel panel-default test">
 						<form>
 							<div class="row">
 								<div class="col-md-6">
@@ -89,26 +84,28 @@
 						</form>
 					</div>
 				</div>
-			<!-- cadre adresse -->
-				<address>
-					<strong>U'POP</strong>
-					<br>
-					107 rue de l'UDEV
-					<br>
-					63000 CLERMONT-FERRAND
-					<br>
-					Tél :
-					<abbr title="Phone">
+				<div class="well well-sm panel panel-default test col-md-4">
+					<address>
+						<strong>U'POP</strong>
+						<br>
+						107 rue de l'UDEV
+						<br>
+						63000 CLERMONT-FERRAND
+						<br>
+						Tél :
+						<abbr title="Phone">
 						(+33) 9 00 10 12 13
-					</abbr>
-				</address>
-				<address>
-					<strong>Mail-contact</strong>
-					<br>
-					<a href="mailto:#">upop.contact@gmail.com</a>
-				</address>
+						</abbr>
+					</address>
+					<address>
+						<strong>Mail-contact</strong>
+						<br>
+						<a href="mailto:#">upop.contact@gmail.com</a>
+					</address>
+				</div>
 			</div>
 		</div>
+	
 <!-- fin articles de la page -->
 <!-- fin contenu de la page -->
 	</body>
