Dylan : Optimisation visuelle
Ajout d'un hide/show sur la description de la figurine.
Armonisation visuelle.

--- a/www/v4/Figurines.html
+++ b/www/v4/Figurines.html
@@ -82,7 +82,7 @@
 		</div>
 <!-- Modèle d'article -->
 <!-- /!\ A saupoudrer de requêtes SQL-->
-		<div class="row fond">
+		<div class="row panel panel-default">
 	<!-- Image de l'article -->
 			<div class="col-sm-1 col-sm-1 col-md-1 col-lg-1">
 				<img class="imageArticle" src="images/got1.jpg">
@@ -90,7 +90,12 @@
 	<!-- Titre et description de la figurine -->
 			<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
 				<p><b>Titre figurine</b></p>
-				<p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
+				<a href="#describe" class="" data-toggle="collapse">Description...</a>
+				<div id="describe" class="collapse">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+					sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				</div>
 				<p class="refColor">Réf : 01010101</p>
 			</div>
 	<!-- Nombre d'articles en stock -->
