--- a/www/v4/Panier.html
+++ b/www/v4/Panier.html
@@ -42,8 +42,9 @@
 					<li><a href="figurines.html"><img class="imgButton" src="images/figurine.png"></a></li>
                     <!-- <li><h2 id="titre">Accueil</h2></li> -->
 					<li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a></li>
-					<li><a href="compte.html"><img class="imgButton" src="images/compte.png"></a></li>
-					<li><a href="panier.html"><img class="imgButton" src="images/panier.png"></a></li>
+					<li id="droite"><a href="compte.html"><img class="imgButton" src="images/compte.png"></a></li>
+					<li id="iconedroite"><a href="panier.html"><img class="imgButton" src="images/panier.png"></a></li>
+					<li id="iconedroite"><a href="panier.html"><img class="imgButton" src="images/compte.png"></a></li>
 				</ul>
 			</div>
 		</div>
