--- a/www/v4/Compte.html
+++ b/www/v4/Compte.html
@@ -39,9 +39,9 @@
 	</nav>
 <!-- fin barre de navigation -->
 		<!-- contenu de la page -->
-		<div class="container">
-			<div class="row centered-form">
-				<div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
+		<div class="container center">
+			<div class="row">
+				<div class="col-xs-12 col-sm-8 col-md-4">
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h3 class="panel-title">Formulaire des données personnelles</h3>
@@ -98,9 +98,25 @@
 						</div>
 					</div>
 				</div>
+						<div class="row centered-form">
+					<div class="col-xs-12 col-sm-8 col-md-4">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+							<h3 class="panel-title">Suivi des commandes</h3>
+						</div>
+						<div class="panel-body">
+						<p id="personnage">Brienne</p>			
+						<p id="refArticle">Ref</p>
+						<p>Prix<b id="prixArticle"></b></p>	
+							
+					</div>
+						</div>
+				</div>
 			</div>
-		</div>
+			</div>
 	</div>
+		</div>
+</div>
 	<!-- fin articles de la page -->
 </div>
 <!-- fin contenu de la page -->
