Anis: modification Navbar
Ajout de l'icone déconnexion.

--- a/www/v4/Figurines.html
+++ b/www/v4/Figurines.html
@@ -44,6 +44,7 @@
 					<li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a></li>
 					<li><a href="compte.html"><img class="imgButton" src="images/compte.png"></a></li>
 					<li><a href="panier.html"><img class="imgButton" src="images/panier.png"></a></li>
+					<li><a href="index.html"><img class="imgButton" src="images/compte.png"></a></li>
 				</ul>
 			</div>
 		</div>
