camille MAJ contact.html (couleur bouton)
changement du bouton seulement vert et pas vert/bleu

--- a/www/v4/Contact.html
+++ b/www/v4/Contact.html
@@ -78,7 +78,7 @@
 									</div>
 								</div>
 								<div class="col-md-12">
-									<button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Envoyer</button>
+									<button type="submit" class="btn pull-right" id="btnContactUs">Envoyer</button>
 								</div>
 							</div>
 						</form>
