Anis : Uniformisation navbar
Model de la navbar appliqué sur toutes les pages.

Maj emplacement icones navbar.

--- a/www/v4/Contact.html
+++ b/www/v4/Contact.html
@@ -20,29 +20,29 @@
 	<body>
 <!-- barre de navigation -->
 	<nav class="navbar navbar-default navbar-fixed-top menu">
-		<div class="container-fluid">
+        <div class="container-fluid">
+            <div class="nav-header">
+                <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" name="button">
+                    <img class="imgButton" src="images/iconeupop.png">
+                </button>
+            </div>
 
-			<div class="nav-header">
-				<button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" name="button">
-				 	<img class="imgButton" src="images/iconeupop.png">
-			 	</button>
-			</div>
-
-			<div class="collapse navbar-collapse navbar-left" id="menu">
-				<ul class="nav navbar-nav text-center">
-					<li><img class="logoBar" src="images/iconeupop.png"></li>
-					<li><a href="accueil.html" ><img class="imgButton" src="images/home.png"></a></li>
-					<li><a href="figurines.html"><img class="imgButton" src="images/figurine.png"></a></li>
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="nav navbar-nav">
+                    <li><img class="logoBar" src="images/iconeupop.png"></li>
+                    <li><a href="accueil.html" ><img class="imgButton" src="images/home.png"></a></li>
+                    <li><a href="figurines.html"><img class="imgButton" src="images/figurine.png"></a></li>
                     <!-- <li><h2 id="titre">Accueil</h2></li> -->
-					<li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a></li>
-					<li><a href="compte.html"><img class="imgButton" src="images/compte.png"></a></li>
-					<li><a href="panier.html"><img class="imgButton" src="images/panier.png"></a></li>
-					<li><a href="index.html"><img class="imgButton" src="images/compte.png"></a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-<!-- fin barre de navigation -->
+                    <li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                	<li><a href="compte.php"><img class="imgButton" src="images/compte.png"></a></li>
+                	<li><a href="panier.html"><img class="imgButton" src="images/panier.png"></a></li>
+                    <li><a href="index.html"><img class="imgButton" src="images/deco.png"></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>rre de navigation -->
 		<!-- contenu de la page -->	
 		<div class="container">
 			<div class="row">
