Anis: correction commentaire nav bar

--- a/www/v4/Contact.html
+++ b/www/v4/Contact.html
@@ -42,7 +42,9 @@
                 </ul>
             </div>
         </div>
-    </nav>rre de navigation -->
+    </nav>
+
+ <!-- fin barre de navigation -->
 		<!-- contenu de la page -->	
 		<div class="container">
 			<div class="row">
