Anis : Modif page Contact
La page contact fonctionne en local.

--- a/www/v4/Contact.html
+++ b/www/v4/Contact.html
@@ -33,7 +33,7 @@
                     <li><a href="accueil.html" ><img class="imgButton" src="images/home.png"></a></li>
                     <li><a href="figurines.html"><img class="imgButton" src="images/figurine.png"></a></li>
                     <!-- <li><h2 id="titre">Accueil</h2></li> -->
-                    <li><a href="contact.html"><img class="imgButton" src="images/contact.png"></a></li>
+                    <li><a href="contact.php"><img class="imgButton" src="images/contact.png"></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                 	<li><a href="compte.php"><img class="imgButton" src="images/compte.png"></a></li>
